[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh.workspace = true
solana-program.workspace = true

[dev-dependencies]
solana-sdk.workspace = true
solana-program-test = "1.16.12"
tokio = "1.35.1"
lite-program-test.workspace = true
