[package]
name = "litesvm-clock-example"
version = "0.0.0"
edition = "2021"
include = ["/src"]

[dependencies]
solana-account-info = { workspace = true }
solana-clock = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-sysvar = { workspace = true }

[lib]
crate-type = ["cdylib"]
