[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh.workspace = true
solana-account-info.workspace = true
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error = { workspace = true, features = ["borsh"] }
solana-pubkey.workspace = true
