[package]
name = "test-program-cpi-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-instruction = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
